--- a/.github/workflows/ml_pipeline.yml
+++ b/.github/workflows/ml_pipeline.yml
@@ -36,3 +36,10 @@ jobs:
 
     - name: Pipeline complete
       run: echo "CI pipeline finished successfully"
+
+
+     - name: Upload model artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: trained-model
+        path: model.pkl
